fix z-index of header vs content and fix footer links (set to root)

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -117,6 +117,10 @@ where in the rendered web page you only see one column to the outside of the tex
 /* The home (and clients page) feature blocks
 -------------------------------------------------------------------------------------- */
 
+.content {
+  z-index: 10;
+}
+
 .homepage-promo-container{
   background: rgba(245,245,245,1);
   background: linear-gradient(to bottom, rgba(245,245,245,1) 0%, rgba(245,245,245,0) 50%, rgba(245,245,245,1) 100%);
